--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^2.4.1
   firebase_auth: ^4.2.5
+  firebase_database: ^10.0.9
 
 
   # The following adds the Cupertino Icons font to your application.
